fix nav bar on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,32 +8,49 @@
     box-sizing: border-box;
 }
 
-.nav-bar {
-    background-color: #0B0A10;
-    padding: 40px;
-    position: sticky;
+/*Navbar*/
+header {
+    width: 100%;
+    height: 80px;
+    background: #0B0A10;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 100px;
 }
 
-.nav-bar .nav-bar-brand {
-    float: left;
+.logo {
+    font-size: 20px;
+}
+
+.logo li {
+    list-style: none;
+}
+
+.logo a {
+    color: white;
+}
+.logo a:hover {
+    color: rgb(17, 107, 226);
+}
+
+.hamburger {
+    display: none;
 }
 
 .nav-bar ul {
+    display: flex;
     list-style-type: none;
-    float: right;
 }
-
-.nav-bar ul li {
-    display: inline;
-    margin-left: 60px;
-}
-
 
 .nav-bar ul li a {
-    text-align: center;
-    text-decoration: none;
+    display: block;
     color: white;
     font-size: large;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    margin: 0 5px;
 }
 
 .nav-bar ul li a:hover {
@@ -44,6 +61,68 @@
     margin-right: 5px;
 }
 
+@media only screen and (max-width: 1320px) {
+    header {
+        padding: 0 50px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    header {
+        padding: 0 30px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+    .hamburger .line {
+        width: 30px;
+        height: 3px;
+        background: white;
+        margin: 6px 0;
+    }
+    .nav-bar {
+        height: 0px;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        right: 0;
+        width: 100vw;
+        background: #0B0A10;
+        overflow: hidden;
+    }
+    .nav-bar ul {
+        display: block;
+        width: fit-content;
+        text-align: center;
+        margin: 60px auto 0 auto;
+        background: #0B0A10;
+        opacity: 0;
+
+    }
+
+    .nav-bar ul li {
+        background: #0B0A10;
+    }
+
+    .nav-bar ul li a {
+        margin-bottom: 40px;
+        background: #0B0A10;
+
+    }
+
+    .nav-bar.active {
+        height: 450px;
+    }
+    .nav-bar.active ul{
+        opacity: 1;
+    }
+}
+
+/*Main content */
 .main-container {
     color: white;
     margin-left: auto;
